--- a/src/ui/feature/feed/FeedAvatar.pug
+++ b/src/ui/feature/feed/FeedAvatar.pug
@@ -15,19 +15,19 @@ script.
 	error = null
 	info = null
 	switch type
-		when 'collection'
+		when 'collection_posts'
 			api.loadWatch(api.ID('collection', collection_id), (x) ->
 				{ data: info, error } = x
 			)
-		when 'multireddit'
+		when 'multireddit_posts'
 			api.loadWatch(api.ID('multireddit', user_name, multireddit_name), (x) ->
 				{ data: info, error } = x
 			)
-		when 'subreddit'
+		when 'subreddit_posts'
 			api.loadWatch(api.ID('subreddit', subreddit_name), (x) ->
 				{ data: info, error } = x
 			)
-		when 'user'
+		when 'user_posts'
 			api.loadWatch(api.ID('user', user_name), (x) ->
 				{ data: info, error } = x
 			)
@@ -37,31 +37,31 @@ script.
 {:else if info}
 	a.feed-avatar(href={format_url({ collection_id, feed_type: type, multireddit_name, subreddit_name, user_name })})
 		section
-			{#if type === 'collection'}
+			{#if type === 'collection_posts'}
 				picture
 					source(srcset='')
 					img.feed-avatar-image(alt='' src='/logo.svg')
 				span.feed-avatar-owner-image
 					UserAvatar(name={info.author_name} size='small')
-			{:else if type === 'multireddit'}
+			{:else if type === 'multireddit_posts'}
 				picture
 					source(srcset='')
 					img.feed-avatar-image(alt='' src='/logo.svg')
 				span.feed-avatar-owner-image
 					UserAvatar(name={info.owner} size='small')
-			{:else if type === 'subreddit'}
+			{:else if type === 'subreddit_posts'}
 				SubredditAvatar(name={subreddit_name} size='large')
-			{:else if type === 'user'}
+			{:else if type === 'user_posts'}
 				UserAvatar(name={user_name} size='large')
 		section
 			span.feed-avatar-list-type {type[0].toUpperCase() + type.slice(1)}
-			{#if type === 'collection'}
+			{#if type === 'collection_posts'}
 				h1.feed-avatar-list-name {info.title}
-			{:else if type === 'multireddit'}
+			{:else if type === 'multireddit_posts'}
 				h1.feed-avatar-list-name {user_name}/{multireddit_name}
-			{:else if type === 'subreddit'}
+			{:else if type === 'subreddit_posts'}
 				h1.feed-avatar-list-name(title={info.display_name}) {info.display_name.startsWith('u_') ? 'u/' + info.display_name.slice(2) : info.display_name}
-			{:else if type === 'user'}
+			{:else if type === 'user_posts'}
 				h1.feed-avatar-list-name {user_name}
 
 style.
