--- a/src/ui/feature/post/PostLink.pug
+++ b/src/ui/feature/post/PostLink.pug
@@ -37,9 +37,8 @@ script.
 style.
 	.post-link
 		align-items flex-start
-		border 1px solid
+		border 1px solid var(--c-subreddit-theme)
 		border-radius 12px
-		color var(--c-subreddit-theme)
 		display flex
 		flex-flow column nowrap
 		gap 6px
