--- a/src/ui/feature/pm/PMLink.pug
+++ b/src/ui/feature/pm/PMLink.pug
@@ -1,30 +1,23 @@
 script.
 	import api from '../../../api/index.js'
 
-	import PMClassificationTag from './PMClassificationTag.pug'
+	import SubredditNameTag from '../subreddit/SubredditNameTag.pug'
 	
-	export id = null
-	private_message = null
-	api.loadWatch(api.ID('private_message', id),
-		(x) -> { data: private_message } = x
-	)
+	export private_message = null
 
 {#if private_message}
-	a.private-message-link
-		PMClassificationTag(classification={private_message.type})
-		p.private-message-link-preview-text {private_message.body}
+	a.private-message-link(href={private_message.context.replace('/?context=3', '')})
+		{#if private_message.subreddit}
+			SubredditNameTag(name={private_message.subreddit})
+		strong {private_message.subject}
 
 style.
 	.private-message-link
+		border 1px solid var(--c-subreddit-theme)
 		border-radius 12px
 		display flex
 		flex-flow column nowrap
-		gap 6px
+		gap 3px
 		padding 12px
 		&:hover
 			background var(--c-subreddit-theme)
-	.private-message-link-preview-text
-		overflow hidden
-		text-overflow ellipsis
-		white-space nowrap
-		width 100%
